--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -213,11 +213,11 @@
                                 <rect key="frame" x="0.0" y="44" width="321" height="189"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="eb4-hy-9Up">
-                                <rect key="frame" x="0.0" y="211" width="320" height="200"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" id="SoI-Wh-4eZ">
+                                <rect key="frame" x="0.0" y="126" width="320" height="305"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <mutableString key="text">Sentinel Secondary is a comprehensive high school that currently enrolls over 1170 students in Grades 8 through 12. Sentinel also offers a number of special programs including Advanced Placement, French Immersion, Computer Immersion, Super Achievers and the Hockey, Soccer, and Tennis Academies.
+                                <color key="backgroundColor" red="0.98823535442352295" green="1" blue="0.9960784912109375" alpha="1" colorSpace="deviceRGB"/>
+                                <string key="text">	Sentinel Secondary is a comprehensive high school that currently enrolls over 1170 students in Grades 8 through 12. Sentinel also offers a number of special programs including Advanced Placement, French Immersion, Computer Immersion, Super Achievers and the Hockey, Soccer, and Tennis Academies.
 
 At Sentinel Secondary School we:
 	- Demonstrate a love of learning by		  modeling and encouraging personal 		  excellence
@@ -556,6 +556,7 @@ Summis Cum Animis
                 <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="dayLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="rotationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="statusLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="MapViewController" superclassName="UIViewController">
